--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Android AR Test - SM20 BP</title>
+<title>Android AR Test - MiniFaber</title>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 <style>
 body { margin: 0; padding: 0; background: #111; font-family: sans-serif; text-align: center; color: white; }
@@ -11,9 +11,9 @@ h1 { margin-top: 10px; }
 </style>
 </head>
 <body>
-<h1>Test AR su Android</h1>
+<h1>AR su Android</h1>
 <model-viewer
-src="sm20_bp.glb"
+src="MiniFaberL.glb"
 ar
 ar-modes="scene-viewer"
 camera-controls
